public/stylesheets/style_bubble.css
body {
  font-size: 20px;
  text-align:center;
  padding: 50px;

}
#beatles {
  /*background-image: url("../images/beatles-songs.png");*/
  background-image: url("../images/beatles-songs.jpg");
  background-color: black;
  /*opacity: 0.4;*/
  z-index: -3;
  position: absolute;
  margin-top: -5em;
  margin-left: -6em;
  
  width: 110%;
  height: 130%;
  background-repeat: no-repeat;
  background-size: cover;
  /*background-size: 115% auto*/

}

#beatles2 {
  /*background-image: url("../images/beatles-songs.png");*/
  /*background-image: url("../images/rsz_beatles-songs.jpg");*/
  background-color: black;
  /*opacity: 0.4;*/
  z-index: -3;
  position: absolute;
  margin-top: -5em;
  margin-left: -6em;
  
  width: 110%;
  height: 130%;
  background-repeat: no-repeat;
  background-size: cover;
  /*background-size: 115% auto*/

}
li {
  overflow:hidden
}
legend {
  margin-bottom: 0px;
}
.control-label {
  color: black;
}
.btn {
  background-color: #3fb618;
  color: white;
  font-size: 1em;
}
.jumbotron a {
  background-color: #3fb618;
  color: white;

}
#trackSelectDiv {
  border-bottom: 1em;
  
}
.jumbotron {
  opacity: 1;
  position: relative;
  z-index: 1;
  background-color: white;
}
#startButton{
  margin-top: 1em;
}
#loginModal{
  /*background-color: #e6e6e6;*/
  background-color: white;
  height: 10em;
  padding-top: 1em;
}
/*.navbar{
  background-color: #e6e6e6
}*/
#d3display{
  background-color: white;
  opacity: 1;
  z-index:-1;
  margin-top: 5px;

  width: 1067px;
  border: 2px;
  /*position: absolute;*/
  /*width: 50em;*/
  height: 60em
}
.navbar-brand {
  font-size: 1.5em;
}
#nav-container {
 /* margin: 0 100px 0 100px;*/
 max-width: 1050px;
}
.pos{
  /*color: green;*/
  border: 2px green solid;
}
.neg {
  /*color: red;*/
  border: 2px red solid;
}  
a, a:visited {
  color:#333;
}
.btn, a::selected {
  color:blue;
}
#artistSearch {
  margin-bottom: 0.5em;
}
#container {
  margin-top: 5px;
  width: 1067px;
  border: 2px;
  background-color: white;
  opacity: 0.95
  
}
header {
  padding: 10px;
}
#text-select {
  float:right;
  margin-right: 10px;
}
#vis {
  overflow: hidden;
  position: relative;
  /*width: 1067px;*/
  height: 510px;
}
#status {
  padding:0 0 5px 5px;
}
#status .active{
  color: #2780e3;
}
.panel {
  margin-top: -10px;
}
.panel-short {
  height: 100px;
  width: 516px;
  float:left;
}
.panel-title {
  font-size: 1.5em
}
.panel-body {
  height: 2em;
  padding: 7px 0 0 0;
}
input#jitter_input {
  width: 390px;
  float: left;
  margin: 10px 0 0 16px;
}

output#jitter_output {
  width:30px;
  float: right;
  margin: -26px 65px 0 0 ;
  font-size: 2em;
}

#overall {
  margin-top: -0.4em;
  font-size: 2em;
}

#results {
  padding: 10px;
  /*background-color: #eee;*/
  margin-top: 5px;
  margin-left: -11px;
  width: 1090px;
  text-align: left;
  height: 150px;
  font-size: 1.5em;
  /*float: right;*/
}

#bubble-background {
  fill: none;
  pointer-events: all;
}

.bubble-node {
   fill: #d1e0f3; 
  /*fill: #DCE9BE;*/
}

.bubble-new {
   fill: red; 
  /*fill: #DCE9BE;*/
}

.bubble-hover {
  /* fill: #b8c7d9; */
  fill: #E8E9E7;
}

.bubble-selected {
  /* fill: #a8c8ee;  */
  fill: #2780e3;
  stroke: #6081a3; 
  /*stroke: #A6BA92;*/
  stroke-width: 3px;
}

.active {
  color: #A6BA92
}

a.bubble-label {
  font-family: arial, georgia, "times new roman", times, serif;
  color: inherit;
  cursor: pointer;
  display: block;
  text-align: center;
  text-decoration: none;
  line-height: 1em;
  position: absolute;
}

.bubble-label .bubble-label-value {
  font: 11px sans-serif;
  white-space: nowrap;
}

